
CLEANFILES = *~

MAINTAINERCLEANFILES = Makefile.in

gladedir = $(pkgdatadir)/ui
dist_glade_DATA = gurlchecker.glade

distpixmapdir = $(pkgdatadir)/ui
dist_distpixmap_DATA = \
	gurlchecker.png \
	gurlchecker_icon.png \
	link_status_bad.png \
	link_status_file_error.png \
	link_status_good.png \
	link_status_ignored.png \
	link_status_mail_bad.png \
	link_status_mail_good.png \
	link_status_malformed.png \
	link_status_nodata.png \
	link_status_restricted.png \
	link_status_timeout.png \
	link_type_css.png \
	link_type_css_ssl.png \
	link_type_folder.png \
	link_type_frame.png \
	link_type_frame_ssl.png \
	link_type_href_ftp.png \
	link_type_href_local.png \
	link_type_href.png \
	link_type_href_ssl.png \
	link_type_image_local.png \
	link_type_image.png \
	link_type_image_ssl.png \
	link_type_mail.png \
	link_type_unknown.png \
	menu_new_bookmarks_file.png \
	menu_new_local_file.png \
	menu_new_web_site.png \
	menu_protocol_ftp.png \
	menu_protocol_https.png \
	security_alert.png \
	w3c_alert.png \
	empty_icon.png

gnomepixmapdir = $(datadir)/pixmaps
dist_gnomepixmap_DATA = gurlchecker.png

